<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="服务器监听端口"
        	/>
        
    	<EditText 
	        android:id="@+id/editListeningPort"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="number"
	        android:text="@string/defaultListeningPort"
        	/>
    	<TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="运算频率"
        	/>
        
    	<EditText 
	        android:id="@+id/editFrequency"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="number"
	        android:text="@string/defaultFrequency"
        	/>
    </LinearLayout>
   
    <Button 
        android:id="@+id/btnStartServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="开启服务器模式"/>
    <Button 
        android:id="@+id/btnStopServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="关闭服务器"/>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    	<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="主机IP"
        />
    	<EditText 
        android:id="@+id/editServerIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultServerIP"
        />
    	<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="监听端口"
        />
    	<EditText 
        android:id="@+id/editServerPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultServerPort"
        />
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="屏幕分辨率（width*length）"
        />
    	<EditText 
        android:id="@+id/editScreenWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultScreenWidth"
        />
    	<EditText 
        android:id="@+id/editScreenLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultScreenLength"
        />
    </LinearLayout>
    <Button 
        android:id="@+id/btnClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="客户端模式"/>

</LinearLayout>